--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ NdRUI/ndrui_tablet_popup.yaml
 NdRUI/ndrui_buttoncard_templates.yaml
 NdRUI/ndrui_popup.yaml
 workspace.code-CodeMac.code-workspace
+www/ndr_floorplan/button_card_templates.yaml
