--- a/ndr_floorplan.yaml
+++ b/ndr_floorplan.yaml
@@ -1,5 +1,3 @@
-button_card_templates: !include button_card_templates.yaml
-
 title: TabletUI
 views:
 
@@ -56,7 +54,7 @@ views:
                 action: none
               state_image:
                 above_horizon: /local/ndr_floorplan/floorplan/casa-giorno.png
-                below_horizon: /local/transparent.png
+                below_horizon: /local/ndr_floorplan/transparent.png
               style:
                 height: 100%
                 left: 50%
@@ -68,25 +66,38 @@ views:
                 action: none
               type: image
 
-              #########################    WEATHER ANIMATIONS    #########################
-              
-            - action: none
+              #########################    WEATHER ANIMATIONS    ######################### 
+      
+            - type: image
+              action: none
               entity: weather.home
               hold_action:
                 action: none
-              image: /local/ndr_floorplan/floorplan/weather/rainstorm.gif
-              state_filter:
-                'pouring': opacity(100%)
+              state_image:
+                rainy: /local/ndr_floorplan/floorplan/weather/rainstorm.gif
+                pouring: /local/ndr_floorplan/floorplan/weather/rain.gif
+                lightning-rainy: /local/ndr_floorplan/floorplan/weather/rain2.gif
+                snowy: /local/ndr_floorplan/transparent.png
+                snowy-rainy: /local/ndr_floorplan/transparent.png
+                sunny: /local/ndr_floorplan/transparent.png
+                clear-night: /local/ndr_floorplan/transparent.png
+                fog: /local/ndr_floorplan/transparent.png
+                hail: /local/ndr_floorplan/transparent.png
+                lightning: /local/ndr_floorplan/transparent.png
+                cloudy: /local/ndr_floorplan/transparent.png
+                partlycloudy: /local/ndr_floorplan/transparent.png
+                windy: /local/ndr_floorplan/transparent.png
+                windy-variant: /local/ndr_floorplan/transparent.png
+                exceptional: /local/ndr_floorplan/transparent.png
               style:
                 left: 60%
                 mix-blend-mode: color-dodge
                 top: 50%
-                width: 110%
-                opacity: 0
+                width: 110% 
               tap_action:
                 action: none
-              type: image     
-      
+                  
+
              #########################    Inside overlays for weather    #########################
 
 
@@ -109,7 +120,7 @@ views:
                 action: none
               state_image:
                 above_horizon: /local/ndr_floorplan/floorplan/interno-giorno.png
-                below_horizon: /local/transparent.png
+                below_horizon: /local/ndr_floorplan/transparent.png
               style:
                 height: 100%
                 left: 50%
@@ -679,7 +690,7 @@ views:
               type: image
               
             - action: none
-              image: /local/transparent.png
+              image: /local/ndr_floorplan/transparent.png
               style:
                 background-color: 'rgba(255, 255, 255, 0.0)'
                 border: '0.1vw dashed rgba(255, 255, 255, 0.3)'
@@ -691,7 +702,7 @@ views:
               tap_action: none
               type: image
             - action: none
-              image: /local/transparent.png
+              image: /local/ndr_floorplan/transparent.png
               style:
                 background-color: 'rgba(255, 255, 255, 0.0)'
                 border: '0.1vw dashed rgba(255, 255, 255, 0.3)'
@@ -1910,7 +1921,7 @@ views:
             type: image
             
           - action: none
-            image: /local/transparent.png
+            image: /local/ndr_floorplan/transparent.png
             style:
               background-color: 'rgba(255, 255, 255, 0.0)'
               border: '0.1vw dashed rgba(255, 255, 255, 0.3)'
@@ -1922,7 +1933,7 @@ views:
             tap_action: none
             type: image
           - action: none
-            image: /local/transparent.png
+            image: /local/ndr_floorplan/transparent.png
             style:
               background-color: 'rgba(255, 255, 255, 0.0)'
               border: '0.1vw dashed rgba(255, 255, 255, 0.3)'
@@ -3685,7 +3696,7 @@ views:
             type: image
             
           - action: none
-            image: /local/transparent.png
+            image: /local/ndr_floorplan/transparent.png
             style:
               background-color: 'rgba(255, 255, 255, 0.0)'
               border: '0.1vw dashed rgba(255, 255, 255, 0.3)'
@@ -3697,7 +3708,7 @@ views:
             tap_action: none
             type: image
           - action: none
-            image: /local/transparent.png
+            image: /local/ndr_floorplan/transparent.png
             style:
               background-color: 'rgba(255, 255, 255, 0.0)'
               border: '0.1vw dashed rgba(255, 255, 255, 0.3)'
@@ -4169,7 +4180,7 @@ views:
             type: image
             
           - action: none
-            image: /local/transparent.png
+            image: /local/ndr_floorplan/transparent.png
             style:
               background-color: 'rgba(255, 255, 255, 0.0)'
               border: '0.1vw dashed rgba(255, 255, 255, 0.3)'
@@ -4181,7 +4192,7 @@ views:
             tap_action: none
             type: image
           - action: none
-            image: /local/transparent.png
+            image: /local/ndr_floorplan/transparent.png
             style:
               background-color: 'rgba(255, 255, 255, 0.0)'
               border: '0.1vw dashed rgba(255, 255, 255, 0.3)'
@@ -4986,7 +4997,7 @@ views:
             type: image
             
           - action: none
-            image: /local/transparent.png
+            image: /local/ndr_floorplan/transparent.png
             style:
               background-color: 'rgba(255, 255, 255, 0.0)'
               border: '0.1vw dashed rgba(255, 255, 255, 0.3)'
@@ -4998,7 +5009,7 @@ views:
             tap_action: none
             type: image
           - action: none
-            image: /local/transparent.png
+            image: /local/ndr_floorplan/transparent.png
             style:
               background-color: 'rgba(255, 255, 255, 0.0)'
               border: '0.1vw dashed rgba(255, 255, 255, 0.3)'
@@ -5499,7 +5510,7 @@ views:
             type: image
             
           - action: none
-            image: /local/transparent.png
+            image: /local/ndr_floorplan/transparent.png
             style:
               background-color: 'rgba(255, 255, 255, 0.0)'
               border: '0.1vw dashed rgba(255, 255, 255, 0.3)'
@@ -5511,7 +5522,7 @@ views:
             tap_action: none
             type: image
           - action: none
-            image: /local/transparent.png
+            image: /local/ndr_floorplan/transparent.png
             style:
               background-color: 'rgba(255, 255, 255, 0.0)'
               border: '0.1vw dashed rgba(255, 255, 255, 0.3)'
